Fix for differentiating between a node that has no text content vs. a node that has text content with just whitespaces (in which case a '-' should be printed instead of a non-breaking space).
git-svn-id: https://ncisvn.nci.nih.gov/svn/cacoresdk/trunk@1119 221b6c9c-8bdd-4aed-8ce9-b1cbd18b7e1b

--- a/sdk-toolkit/software/workspace/web/styleSheet.css
+++ b/sdk-toolkit/software/workspace/web/styleSheet.css
@@ -381,7 +381,7 @@ DATA TABLE BEGINS
 }
 .dataCellText{ /* for text output cells */
   font-family:arial,helvetica,verdana,sans-serif;
-  font-size:0.7em;
+  font-size:1.0em;
   color:#000000; /* constant: black */
   border-right:1px solid #5C5C5C; /* constant: dark gray */
   border-bottom:1px solid #5C5C5C; /* constant: dark gray */
